--- a/index.qmd
+++ b/index.qmd
@@ -19,14 +19,13 @@ about:
 ---
 ## Hello!
 
-Hi my name is Sam (he/they) and I am currently a Master of Environmental Data Science student at the Bren School of Environmental Science & Management at the University of California, Santa Barbara with experience in plant sciences & coastal ecology research. I'm excited to continue my environmental education focusing on data science I also have a passion for accessible data communication and environmental justice for underrepresented populations  
+Hi my name is Sam (he/they) and I am currently a Master of Environmental Data Science student at the Bren School of Environmental Science & Management at the University of California, Santa Barbara with experience in plant sciences & coastal ecology I'm excited to continue my environmental education focusing on data science I also have a passion for accessible data communication and environmental justice for underrepresented populations  
 
 ## Skills & Interests
 {{< fa seedling >}} Plants -- {{< fa code-branch >}} Coding -- {{< fa tree >}} Ecology -- {{< fa music >}} Music/ Cello -- {{< fa sailboat >}} Sailing
 
-
 ## Education
 
-Master of Environmental Data Science (MEDS), UCSB (Expected 2024)
+Master of Environmental Data Science (MEDS); University of California Santa Barbara (Expected 2024)
 
-B.S. Biology and B.A. Environmental Studies, St. Mary's College of Maryland (2023)
+B.S. Biology and B.A. Environmental Studies, Minor in French; St. Mary's College of Maryland (2023)
