--- a/about.qmd
+++ b/about.qmd
@@ -43,5 +43,5 @@ Sometimes music is best enjoyed (and played) outside :)
 :::
 :::
 
-Now that I'm not sailing as much, I have been able to devote more time to other hobbies including running, playing cello, and transcribing/ arranging music. During 2020 when playing music with others was not possible, I began arranging music for me and my dad (a flautist) to play together. I mainly use the MuseScore4 engraving software and am working on uploading my transcriptions and arrangements to my MuseScore profile - [check it out!](https://musescore.com/user/29095840) 
+Now that I'm not sailing as much, I have been able to devote more time to other hobbies including running, playing cello, and transcribing/ arranging music. During 2020, I began arranging music for me and my dad (a flautist) to play together. I mainly use the MuseScore4 engraving software and am working on uploading my transcriptions and arrangements to my MuseScore profile - [check it out!](https://musescore.com/user/29095840) 
 
