--- a/projects.qmd
+++ b/projects.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Projects"
-subtitle: "some of my..." 
+subtitle: "some of the cool science I've worked on" 
 listing:
   contents: projects
   feed: true
@@ -10,7 +10,7 @@ listing:
   grid-item-align: left
   max-description-length: 175
   date-format: medium
-  #categories: numbered
+  categories: numbered
   sort-ui: false
   filter-ui: false
 page-layout: full
