--- a/projects/2023-11-10-phytophthora/index.qmd
+++ b/projects/2023-11-10-phytophthora/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Phytophthora presence in Southern Maryland coasal soils"
+title: "Phytophthora presence in Southern Maryland coastal soils"
 subtitle: "Analyzing the influence of seawater intrusion on oomycete abundance"
 description: "This was my directed research project as an undergraduate student at St. Mary's College of Maryland in Dr. Lorena Torres-Martinez's lab."
 author:
