power outage post

--- a/projects.qmd
+++ b/projects.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Projects"
-subtitle: "some of the cool science I've worked on" 
+subtitle: "some science and thoughts" 
 listing:
   contents: projects
   feed: true
