--- a/index.qmd
+++ b/index.qmd
@@ -26,6 +26,6 @@ Hi my name is Sam (he/they) and I am currently a Master of Environmental Data Sc
 
 ## Education
 
-Master of Environmental Data Science (MEDS); University of California Santa Barbara (Expected 2024)
+Master of Environmental Data Science (MEDS): University of California Santa Barbara (Expected 2024)
 
-B.S. Biology and B.A. Environmental Studies, Minor in French; St. Mary's College of Maryland (2023)
+B.S. Biology and B.A. Environmental Studies, Minor in French: St. Mary's College of Maryland (2023)
